<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.JoinNowActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="?android:attr/windowBackground"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:gravity="start">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/login_logo"
                    app:tint="@color/main_color" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/join_now"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/_12ssp" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/sign_in"
        android:textColor="@color/gray"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="@dimen/_5sdp"
            android:text="@string/fg_password"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:elevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_color">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">


                    <ProgressBar
                        android:id="@+id/button_progress"
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@id/button_text"
                        android:indeterminate="true"
                        android:indeterminateTint="#ffffff"
                        android:indeterminateTintMode="src_atop"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/btn_continue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </FrameLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Or"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16ssp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/gray" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/card_google_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/outline_button">

            <ImageView
                android:id="@+id/google_img"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/button_text2"
                android:src="@drawable/google" />


            <TextView
                android:id="@+id/button_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/sign_with_google"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16ssp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>