<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/main_color"
        tools:ignore="ContentDescription" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:padding="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />


    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:elevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="40dp"
            app:cardElevation="0dp">

            <FrameLayout
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/main_color">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">


                    <ProgressBar
                        android:id="@+id/button_progress"
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:layout_toStartOf="@id/button_text"
                        android:indeterminate="true"
                        android:indeterminateTint="#ffffff"
                        android:indeterminateTintMode="src_atop"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/join_now"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </FrameLayout>

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/outline_button">

            <ImageView
                android:id="@+id/google_img"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/button_text2"
                android:src="@drawable/google" />


            <TextView
                android:id="@+id/button_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/join_with_google"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16ssp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_20sdp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/main_color"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>